src/test/ui/type-alias-impl-trait/incomplete-inference.stderr
error[E0282]: type annotations needed
  --> $DIR/incomplete-inference.rs:6:5
   |
LL |     None
   |     ^^^^ cannot infer type for type parameter `T` declared on the enum `Option`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
